refactor(ui): update Button component with disabled prop, refactor tests and styles, and enhance tooling
- Add disabled prop to Button component and update interface to extend ComponentProps<'button'>
- Refactor Button tests to match updated CSS classes and improve formatting
- Fix className attribute in app.tsx for Preact compatibility
- Update copilot instructions documentation for conciseness
- Add file list generation to combine-files.js and new npm script
- Clean up CSS comments in index.css

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "build:docs": "typedoc",
+    "combine": "node combine-files.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
