--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "jsdom": "^27.1.0",
     "prettier": "^3.6.2",
+    "sass": "^1.93.3",
     "storybook": "^10.0.2",
     "typedoc": "^0.28.14",
     "typescript": "~5.9.3",
