--- a/package.json
+++ b/package.json
@@ -1,15 +1,47 @@
 {
-  "name": "preact-ui-components",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "@your-org/preact-ui-components",
+  "version": "1.0.0",
+  "description": "A collection of reusable Preact UI components with TypeScript support",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./styles": "./dist/styles.css"
+  },
+  "files": [
+    "dist",
+    "src",
+    "README.md",
+    "LICENSE"
+  ],
+  "keywords": [
+    "preact",
+    "ui-components",
+    "typescript",
+    "react",
+    "components",
+    "storybook"
+  ],
+  "author": "Your Name <your.email@example.com>",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/username/preact-ui-components.git"
+    "url": "https://github.com/your-username/preact-ui-components.git"
   },
+  "bugs": {
+    "url": "https://github.com/your-username/preact-ui-components/issues"
+  },
+  "homepage": "https://github.com/your-username/preact-ui-components#readme",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && npm run build:css",
+    "build:css": "sass src/styles/index.scss dist/styles.css --style=compressed",
+    "build:lib": "tsc -b && vite build --mode library",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build -o dist/storybook",
@@ -23,11 +55,13 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "prepublishOnly": "npm run build && npm run test:run"
   },
-  "dependencies": {
-    "preact": "^10.27.2"
+  "peerDependencies": {
+    "preact": ">=10.0.0"
   },
+  "dependencies": {},
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
     "@eslint/js": "^9.39.0",
