--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,19 +78,6 @@ jobs:
           path: dist/
           retention-days: 7
 
-      - name: Upload Storybook artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: storybook-artifacts
-          path: dist/storybook/
-          retention-days: 7
-
-      - name: Upload docs artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: docs-artifacts
-          path: dist/docs/
-          retention-days: 7
 
   test:
     runs-on: ubuntu-latest
@@ -120,10 +107,10 @@ jobs:
       - name: Generate coverage report
         run: npm run test:coverage
 
-      - name: Upload coverage reports
+      - name: Upload coverage artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-report
+          name: coverage-artifacts
           path: dist/coverage/
           retention-days: 7
 
@@ -139,7 +126,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
+    needs: 
+      - build
+      - test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -148,7 +137,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: .
+          path: ./dist
+
+      - name: Download coverage artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-artifacts
+          path: ./dist/coverage
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -156,7 +151,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: ./dist
 
       - name: Deploy to GitHub Pages
         id: deployment
