--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,8 @@ jobs:
 
       - name: Build application
         run: npm run build
+        env:
+          VITE_BASE_PATH: '/preact-ui-components/'
 
       - name: Build Storybook
         run: npm run build-storybook
