--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
   "peerDependencies": {
     "preact": ">=10.0.0"
   },
-  "dependencies": {},
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
     "@eslint/js": "^9.39.0",
@@ -83,6 +82,7 @@
     "@typescript-eslint/parser": "^8.46.2",
     "@vitest/coverage-v8": "^4.0.6",
     "@vitest/ui": "^4.0.6",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
